Updated Pods, added more default tableviewcells & tableviewheader, added Timer option for easy NSTimer within Singleton to prevent crashes

--- a/App/Source/Info.plist
+++ b/App/Source/Info.plist
@@ -30,6 +30,7 @@
 		<string>twitter</string>
 		<string>whatsapp</string>
 		<string>cydia</string>
+		<string>comgooglemaps</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
