Update pods, added Privacy in info plist for iOS10, updated build settings for iOS10

--- a/App/Source/Info.plist
+++ b/App/Source/Info.plist
@@ -39,6 +39,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCalendarsUsageDescription</key>
+	<string>$(PRODUCT_NAME) maakt gebruikt van de agenda</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) maakt gebruikt van de camera</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>$(PRODUCT_NAME) maakt gebruikt van de HealthKit</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Lato-Black.ttf</string>
