Updated pods, basic blaze controllers & added bdgcoredatamethods & appearance safari fixes

--- a/App/Podfile
+++ b/App/Podfile
@@ -9,7 +9,7 @@ def shared_pods
     pod 'BDGCategories'
     pod 'BDGScreenshot'
     
-    pod 'BlazeFlow'
+    pod 'Blaze'
     pod 'AFNetworking'
     pod 'SVProgressHUD'
     pod 'HockeySDK-Source'
